# audio_relay

./: .gitignore  Makefile  README.md  build.gradle  dbus_utils.cpp  dbus_utils.h  dbuscontrol.cpp  emulator_server.sh  ffmpeg_server.py  pa_utils.cpp  pa_utils.h  pcstream.service  server.cpp  server.py  server_pulse.cpp  settings.gradle
app/: build.gradle  lint-baseline.xml
app/src/androidTest/java/com/example/pcstream/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  pcstream.cpp
app/src/main/java/com/example/pcstream/: AudioClient.java  AudioService.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/pcstream/: ExampleUnitTest.java
serve/: Cargo.toml  Cross.toml  build.rs  openaptx.c  pcstream.service
serve/src/: bindings.rs  main.rs
server/: Cargo.toml
server/src/: aptx.rs  lib.rs  listen.rs  main.rs  utils.rs
server/src/aptx/: aptx_table.rs
