[package]
name = "server_pulse"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
cpal = "0.15.3"
env_logger = "0.11.3"
log = "0.4.21"

[target.x86_64-unknown-linux-gnu.dependencies]
dbus = "0.9.7"
libpulse-binding = "2.28.1"
libpulse-simple-binding = "2.28.1"

[target.'cfg(target_os="android")'.dependencies]
android_logger = "0.13.3"
jni = { version = "0.21.1", default-features = false }

[[bin]]
name = "listen"
path = "src/listen.rs"

[[bin]]
name = "server_pulse"
path = "src/main.rs"

[lib]
crate-type = ["dylib"]
name = "aptx_rust"
path = "src/lib.rs"

